objects/TempTest__Test_Object__c.object
<CustomObject   >
    <fields>
        <fullName>TempTest__Checkbox10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempTest__Checkbox11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempTest__Checkbox12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempTest__Checkbox9_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox9 Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempTest__Selected__c</fullName>
        <formula>IF(OR(TempTest__Checkbox1__c,TempTest__Checkbox2__c,TempTest__Checkbox3__c,TempTest__Checkbox4__c,TempTest__Checkbox5__c,TempTest__Checkbox6__c,TempTest__Checkbox7__c,TempTest__Checkbox8__c,TempTest__Checkbox9_Updated__c,TempTest__Checkbox10__c,TempTest__Checkbox11__c,TempTest__Checkbox12__c,TempTest__Checkbox13__c,TempTest__Checkbox14__c,TempTest__Checkbox15__c),LEFT(IF(TempTest__Checkbox1__c,&apos;Checkbox1,&apos;,&apos;&apos;)+IF(TempTest__Checkbox2__c,&apos;Checkbox2,&apos;,&apos;&apos;)+IF(TempTest__Checkbox3__c,&apos;Checkbox3,&apos;,&apos;&apos;)+IF(TempTest__Checkbox4__c,&apos;Checkbox4,&apos;,&apos;&apos;)+IF(TempTest__Checkbox5__c,&apos;Checkbox5,&apos;,&apos;&apos;)+IF(TempTest__Checkbox6__c,&apos;Checkbox6,&apos;,&apos;&apos;)+IF(TempTest__Checkbox7__c,&apos;Checkbox7,&apos;,&apos;&apos;)+IF(TempTest__Checkbox8__c,&apos;Checkbox8,&apos;,&apos;&apos;)+IF(TempTest__Checkbox9_Updated__c,&apos;Checkbox9,&apos;,&apos;&apos;)+IF(TempTest__Checkbox10__c,&apos;Checkbox10,&apos;,&apos;&apos;)+IF(TempTest__Checkbox11__c,&apos;Checkbox11,&apos;,&apos;&apos;)+IF(TempTest__Checkbox12__c,&apos;Checkbox12,&apos;,&apos;&apos;)+IF(TempTest__Checkbox13__c,&apos;Checkbox13,&apos;,&apos;&apos;)+IF(TempTest__Checkbox14__c,&apos;Checkbox14,&apos;,&apos;&apos;)+IF(TempTest__Checkbox15__c,&apos;Checkbox15,&apos;,&apos;&apos;),LEN(IF(TempTest__Checkbox1__c,&apos;Checkbox1,&apos;,&apos;&apos;)+IF(TempTest__Checkbox2__c,&apos;Checkbox2,&apos;,&apos;&apos;)+IF(TempTest__Checkbox3__c,&apos;Checkbox3,&apos;,&apos;&apos;)+IF(TempTest__Checkbox4__c,&apos;Checkbox4,&apos;,&apos;&apos;)+IF(TempTest__Checkbox5__c,&apos;Checkbox5,&apos;,&apos;&apos;)+IF(TempTest__Checkbox6__c,&apos;Checkbox6,&apos;,&apos;&apos;)+IF(TempTest__Checkbox7__c,&apos;Checkbox7,&apos;,&apos;&apos;)+IF(TempTest__Checkbox8__c,&apos;Checkbox8,&apos;,&apos;&apos;)+IF(TempTest__Checkbox9_Updated__c,&apos;Checkbox9,&apos;,&apos;&apos;)+IF(TempTest__Checkbox10__c,&apos;Checkbox10,&apos;,&apos;&apos;)+IF(TempTest__Checkbox11__c,&apos;Checkbox11,&apos;,&apos;&apos;)+IF(TempTest__Checkbox12__c,&apos;Checkbox12,&apos;,&apos;&apos;)+IF(TempTest__Checkbox13__c,&apos;Checkbox13,&apos;,&apos;&apos;)+IF(TempTest__Checkbox14__c,&apos;Checkbox14,&apos;,&apos;&apos;)+IF(TempTest__Checkbox15__c,&apos;Checkbox15,&apos;,&apos;&apos;))-1) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected</label>
        <type>Text</type>
    </fields>
    <label>Test Object</label>
    <listViews>
        <fullName>TempTest__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Test Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <recordTypes>
        <fullName>TempTest__New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>TempTest__TestObject_RecordType</fullName>
        <active>true</active>
        <label>TestObject RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>TempTest__Test_Object_Record_Type2</fullName>
        <active>true</active>
        <description>test</description>
        <label>Test Object Record Type2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>